fixed preview image stretching

--- a/src/app/public/modules/file-attachment/file-attachment.component.scss
+++ b/src/app/public/modules/file-attachment/file-attachment.component.scss
@@ -84,8 +84,8 @@
       @include sky-border(dark, top, bottom, left, right);
       box-shadow: none;
       margin: 0 10px 0 0;
-      max-width: 100px;
-      flex: 1;
+      width: 100px;
+      flex: 0;
       order: 1;
     }
 
